[gd_scene load_steps=11 format=3 uid="uid://p0s4wcojfpvu"]

[ext_resource type="Script" uid="uid://djpc1opr45kja" path="res://ui/scenes/main_menu.gd" id="1_5bmwn"]
[ext_resource type="StyleBox" uid="uid://qd2mb2388n2r" path="res://scenes/options.tres" id="2_ulys0"]
[ext_resource type="Script" uid="uid://bsnfd31mfy5vd" path="res://ui/scenes/options.gd" id="2_wauxy"]
[ext_resource type="Texture2D" uid="uid://pfsi4el1y5wh" path="res://assets/Speaker_Icon.svg" id="4_enigy"]

[sub_resource type="Theme" id="Theme_x2wfi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wauxy"]

[sub_resource type="FontFile" id="FontFile_ulys0"]
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Theme" id="Theme_ulys0"]
default_font_size = 30
/styles/options = ExtResource("2_ulys0")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/fonts/font = SubResource("FontFile_ulys0")
Button/styles/normal = ExtResource("2_ulys0")

[sub_resource type="Theme" id="Theme_wauxy"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_enigy"]
color = Color(0.47788, 0.47788, 0.47788, 1)
thickness = 7

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5bmwn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.2484, 0.2484, 0.2484, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 440.0
offset_right = 712.0
offset_bottom = 83.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 60
text = "Le test UI"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 2
offset_top = 183.0
offset_right = 1152.0
offset_bottom = 464.0
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Play" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(220, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_x2wfi")
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Settings" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(220, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Quit" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(220, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -169.5
offset_right = 247.0
offset_bottom = 169.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wauxy")
script = ExtResource("2_wauxy")

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Options"
horizontal_alignment = 1

[node name="Back" type="Button" parent="Options"]
layout_mode = 0
offset_left = 153.0
offset_top = 273.5
offset_right = 332.0
offset_bottom = 314.5
theme = SubResource("Theme_ulys0")
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Music" type="Control" parent="Options"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MusicSlider" type="HSlider" parent="Options/Music"]
offset_left = 150.0
offset_top = 76.5
offset_right = 388.0
offset_bottom = 144.5
theme = SubResource("Theme_wauxy")
theme_override_styles/slider = SubResource("StyleBoxLine_enigy")
min_value = -80.0
max_value = 0.0
value = -30.0

[node name="SpeakerIcon" type="Sprite2D" parent="Options/Music"]
position = Vector2(94, 107.5)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_enigy")

[node name="Music" type="Label" parent="Options/Music/SpeakerIcon"]
offset_left = 30.0
offset_top = 170.0
offset_right = 590.0
offset_bottom = 447.0
theme_override_colors/font_color = Color(0.0543397, 0.0221211, 0.00970018, 1)
theme_override_font_sizes/font_size = 100
text = "Music
"

[node name="Sfx" type="Control" parent="Options"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SfxSlider" type="HSlider" parent="Options/Sfx"]
layout_mode = 0
offset_left = 149.0
offset_top = 166.5
offset_right = 387.0
offset_bottom = 234.5
theme = SubResource("Theme_wauxy")
theme_override_styles/slider = SubResource("StyleBoxLine_enigy")
min_value = -80.0
max_value = 0.0
value = -30.0

[node name="SfxIcon" type="Sprite2D" parent="Options/Sfx"]
position = Vector2(92, 194.5)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_enigy")

[node name="Sfx" type="Label" parent="Options/Sfx/SfxIcon"]
offset_left = 40.0
offset_top = 180.0
offset_right = 600.0
offset_bottom = 457.0
theme_override_colors/font_color = Color(0.0543397, 0.0221211, 0.00970018, 1)
theme_override_font_sizes/font_size = 100
text = "Sfx
"

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options/Back" to="Options" method="_on_back_pressed"]
[connection signal="value_changed" from="Options/Music/MusicSlider" to="Options" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Options/Sfx/SfxSlider" to="Options" method="_on_sfx_slider_value_changed"]
